Añadiendo frase a modo de cita...

--- a/Archivos Ejecutables/requisito.html
+++ b/Archivos Ejecutables/requisito.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diferencias entre Requerimientos Funcionales y No Funcionales</title>
+    <title>Qué es un Requisito?</title>
     
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
@@ -91,13 +91,13 @@
 
     <main class="container">
 
-        <!-- HISTORIA -->
+        <!-- DEFINICIÓN DE REQUISITO -->
 
         <div class="row py-5">
             <div class="col">
                 <div class="border-bottom">
                     <div class=".text-shadow-custom" style="text-shadow: -1px -1px 1px #aaa, 0px 4px 1px rgba(0, 0, 0, 0.5), 4px 4px 5px rgba(0, 0, 0, 0.7),0px 0px 7px rgba(0, 0, 0, 0.4);">
-                        <h1 class="text-info text-center">Historia</h1>
+                        <h1 class="text-light text-center">Qué es un Requisito?</h1>
                     </div>
                 </div>
             </div>
@@ -109,11 +109,7 @@
 
                 <div class=".text-shadow-custom" style="text-shadow: -1px -1px 1px #aaa, 0px 4px 1px rgba(0, 0, 0, 0.5), 4px 4px 5px rgba(0, 0, 0, 0.7),0px 0px 7px rgba(0, 0, 0, 0.4);">
 
-                    <blockquote class="blockquote">
-
-                        <h5 class="text-warning text-center text-shadow-custom">"Un requisito es una declaración que describe una característica, función o restricción que debe cumplir un sistema o software. Estos requisitos pueden ser de dos tipos: funcionales, que describen lo que el sistema debe hacer (por ejemplo, registrar un usuario), y no funcionales, que describen cómo el sistema debe ser (por ejemplo, ser seguro o rápido)."</h5></br>
-
-                    </blockquote>
+                    <h5 class="h5 text-warning text-center text-shadow-custom">"Un requisito es una declaración que describe una característica, función o restricción que debe cumplir un sistema o software. Estos requisitos pueden ser de dos tipos: funcionales, que describen lo que el sistema debe hacer (por ejemplo, registrar un usuario), y no funcionales, que describen cómo el sistema debe ser (por ejemplo, ser seguro o rápido)."</h5></br>
 
                 </div>
 
