--- a/Archivos Ejecutables/index.html
+++ b/Archivos Ejecutables/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-dark bg-dark">
             <div class="container">
                 <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                     <div class="sidebar-brand-icon"></div>
@@ -38,9 +38,9 @@
 
                     <!-- PESTAÑAS -->
 
-                    <ul class="navbar-nav ms-auto">
+                    <ul class="navbar-nav me-auto">
 
-                        <ul class="navbar-nav ms-auto">
+                        <ul class="navbar-nav me-auto">
 
                         <li class="nav-item dropdown">
                             <a 
@@ -59,19 +59,27 @@
                             <ul class="dropdown-menu" aria-labelledby="subMenuTransparencia">
 
                                 <li><a href="requisito.html" class="dropdown-item">Qué es un requisito?</a></li>
-                                <li><a href="https://www.ucn.cl/comunicaciones-ucn/noticias/ucn-realizo-el-lanzamiento-de-observatorio-regional-de-relaves-mineros/" class="dropdown-item">Últimas Noticias</a></li>
-                                <li><a href="cursos.html" class="dropdown-item">Acceso a Cursos</a></li>
+                                <li><a href="historia.html" class="dropdown-item">Historia</a></li>
 
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a href="historia.html" class="nav-link">Historia</a>
+                            <a href="noFuncional.html" class="nav-link">Qué son los Requisitos No Funcionales</a>
                         </li>
                         <li class="nav-item">
-                            <a href="objetivos.html" class="nav-link">Objetivos</a>
+                            <a href="versus.html" class="nav-link">Requisitos No Funcionales VS Requisitos Funcionales</a>
                         </li>
                         <li class="nav-item">
-                            <a href="noticias.html" class="nav-link">Noticias</a>
+                            <a href="tipos.html" class="nav-link">Tipos de Requisitos No Funcionales</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="ejemplos.html" class="nav-link">Ejemplos de Requisitos No Funcionales</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="beneficios.html" class="nav-link">Beneficios de Requisitos No Funcionales</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="importancia.html" class="nav-link">Requisitos No Funcionales en el Desarrollo de Software</a>
                         </li>
 
                     </ul>
@@ -82,6 +90,7 @@
                         <button class="btn btn-outline-light" type="button">Buscar</button>
 
                     </form>
+
                 </div>
             </div>
         </nav>
