--- a/Archivos Ejecutables/requisito.html
+++ b/Archivos Ejecutables/requisito.html
@@ -114,17 +114,21 @@
 
         <div class="row">
 
-            <div class="col">
+            <div class="col text-center">
 
                 <div class=".text-shadow-custom" style="text-shadow: -1px -1px 1px #aaa, 0px 4px 1px rgba(0, 0, 0, 0.5), 4px 4px 5px rgba(0, 0, 0, 0.7),0px 0px 7px rgba(0, 0, 0, 0.4);">
 
-                    <h5 class="h5 text-warning text-center text-shadow-custom">"Un requisito es una declaración que describe una característica, función o restricción que debe cumplir un sistema o software. Estos requisitos pueden ser de dos tipos: funcionales, que describen lo que el sistema debe hacer (por ejemplo, registrar un usuario), y no funcionales, que describen cómo el sistema debe ser (por ejemplo, ser seguro o rápido)."</h5></br>
+                    <h5 class="h5 text-warning text-center text-shadow-custom">"Un requisito es una declaración que describe una característica, función o restricción que debe cumplir un sistema o software. Estos requisitos pueden ser de dos tipos: funcionales, que describen lo que el sistema debe hacer (por ejemplo, registrar un usuario), y no funcionales, que describen cómo el sistema debe ser (por ejemplo, ser seguro o rápido)."</h5></br></br>
 
                 </div>
+
+                <img src="img/4295914.png" width="250px" margin-top="mb-auto" alt="">
+                <img src="img/5109476.png" width="250px" margin-left="auto">
 
             </div>
 
         </div>
+        </br>
 
         <div class=".text-shadow-custom" style="text-shadow: -1px -1px 1px #aaa, 0px 4px 1px rgba(0, 0, 0, 0.5), 4px 4px 5px rgba(0, 0, 0, 0.7),0px 0px 7px rgba(0, 0, 0, 0.4);">
 
