Añadiendo contenido asociado al maquetado...

--- a/Archivos Ejecutables/versus.html
+++ b/Archivos Ejecutables/versus.html
@@ -114,16 +114,15 @@
 
         <div class="row">
 
-            <div class="col text-center">
+            <div class="col">
 
                 <div class=".text-shadow-custom" style="text-shadow: -1px -1px 1px #aaa, 0px 4px 1px rgba(0, 0, 0, 0.5), 4px 4px 5px rgba(0, 0, 0, 0.7),0px 0px 7px rgba(0, 0, 0, 0.4);">
 
-                    <h5 class="h5 text-warning text-center text-shadow-custom">"Un requisito es una declaración que describe una característica, función o restricción que debe cumplir un sistema o software. Estos requisitos pueden ser de dos tipos: funcionales, que describen lo que el sistema debe hacer (por ejemplo, registrar un usuario), y no funcionales, que describen cómo el sistema debe ser (por ejemplo, ser seguro o rápido)."</h5></br></br>
+                    <p class="text-light text-shadow-custom">◘ En la ingeniería de software, tanto los requisitos funcionales como los no funcionales juegan un papel crucial en la definición de cómo se espera que funcione un sistema y las cualidades que este debe poseer, como usabilidad, mantenibilidad, escalabilidad y seguridad.</p>
+
+                    <p class="text-light text-shadow-custom">◘ Ambos tipos de requisitos son esenciales para crear un sistema completo y exitoso. Veamos en qué se diferencia cada uno:</p>
 
                 </div>
-
-                <img src="img/4295914.png" width="250px" margin-top="mb-auto" alt="">
-                <img src="img/5109476.png" width="250px" margin-left="auto">
 
             </div>
 
