Agregando tabla oscura comparativa...

--- a/Archivos Ejecutables/versus.html
+++ b/Archivos Ejecutables/versus.html
@@ -127,7 +127,45 @@
             </div>
 
         </div>
-        </br>
+
+        <hr>
+
+        <div class="row">
+
+            <div class="col">
+
+                <table class="table table-dark table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">Requisitos No Funcionales</th>
+                            <th scope="col">Requisitos Funcionales</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+
+                            <td>Mark</td>
+                            <td>Otto</td>
+
+                        </tr>
+                        <tr>
+
+                            <td>Jacob</td>
+                            <td>Thornton</td>
+
+                        </tr>
+                        <tr>
+
+                            <td>Larry the Bird</td>
+                            <td>@twitter</td>
+
+                        </tr>
+                    </tbody>
+                </table>
+
+            </div>
+
+        </div>
 
         <div class=".text-shadow-custom" style="text-shadow: -1px -1px 1px #aaa, 0px 4px 1px rgba(0, 0, 0, 0.5), 4px 4px 5px rgba(0, 0, 0, 0.7),0px 0px 7px rgba(0, 0, 0, 0.4);">
 
