Administrando el "grid" de Bootstrap 5...

--- a/Archivos Ejecutables/ejemplos.html
+++ b/Archivos Ejecutables/ejemplos.html
@@ -106,7 +106,7 @@
             <div class="col">
                 <div class="border-bottom">
                     <div class=".text-shadow-custom" style="text-shadow: -1px -1px 1px #aaa, 0px 4px 1px rgba(0, 0, 0, 0.5), 4px 4px 5px rgba(0, 0, 0, 0.7),0px 0px 7px rgba(0, 0, 0, 0.4);">
-                        <h1 class="text-info text-center">Ejemplos de requisitos no funcionales</h1>
+                        <h1 class="text-success text-center">Ejemplos de requisitos no funcionales</h1>
                     </div>
                 </div>
             </div>
@@ -114,19 +114,35 @@
 
         <div class="row">
 
+            <div class=".text-shadow-custom" style="text-shadow: -1px -1px 1px #aaa, 0px 4px 1px rgba(0, 0, 0, 0.5), 4px 4px 5px rgba(0, 0, 0, 0.7),0px 0px 7px rgba(0, 0, 0, 0.4);">
+
+                <p class="text-light text-shadow-custom">Los requisitos no funcionales variarán según el contexto y los objetivos específicos de cada sistema, aquí algunos ejemplos por tipo de sistema:</p>
+
+            </div>
+
             <div class="col">
 
+                <div class="container">
+
+                    <div class=".text-shadow-custom" style="text-shadow: -1px -1px 1px #aaa, 0px 4px 1px rgba(0, 0, 0, 0.5), 4px 4px 5px rgba(0, 0, 0, 0.7),0px 0px 7px rgba(0, 0, 0, 0.4);">
+
+                        <p class="text-light text-shadow-custom">◘ Ejemplo:</p>
+
+                        <img src="img/4521117.png" width="500px" class="mx-auto d-block" alt="">
+
+                        <p class="text-light text-shadow-custom">◘ Rendimiento: El sistema debe cargar páginas en un tiempo promedio de menos de 2 segundos.</p>
+
+                        <p class="text-light text-shadow-custom">◘ Escalabilidad: El sistema debe ser capaz de manejar un aumento del 50% en el tráfico durante la temporada de ventas sin degradar el rendimiento.</p>
+
+                        <p class="text-light text-shadow-custom">◘ Disponibilidad: La tasa de disponibilidad objetivo debe ser del 99.9%, por lo que el sistema debe estar disponible las 24 horas del día, los 7 días de la semana, con un tiempo de inactividad máximo de 1 hora al mes para mantenimiento programado.</p>
+
+                    </div>
+
+                </div>
+               
+            </div>
+                
                 <div class=".text-shadow-custom" style="text-shadow: -1px -1px 1px #aaa, 0px 4px 1px rgba(0, 0, 0, 0.5), 4px 4px 5px rgba(0, 0, 0, 0.7),0px 0px 7px rgba(0, 0, 0, 0.4);">
-
-                    <p class="text-light text-shadow-custom">Los requisitos no funcionales son las características y propiedades de un sistema que se relacionan con su desempeño, calidad y éxito. Es importante identificar y definir adecuadamente los requisitos no funcionales para garantizar el éxito y la calidad del sistema desarrollado.Te dejamos una lista de los más comunes:</p>
-
-                    <p class="text-light text-shadow-custom">◘ Rendimiento: establece las expectativas de velocidad y capacidad del sistema. Puede incluir aspectos como tiempos de respuesta, tiempos de carga, rendimiento bajo diferentes cargas de trabajo y escalabilidad.</p>
-
-                    <p class="text-light text-shadow-custom">◘ Seguridad: define los mecanismos de seguridad necesarios para proteger el sistema y los datos contra amenazas y ataques. Puede incluir autenticación, autorización, encriptación y protección contra vulnerabilidades.</p>
-
-                    <p class="text-light text-shadow-custom">◘ Usabilidad: describe cómo debe ser la experiencia del usuario al interactuar con el sistema. Puede incluir aspectos como la interfaz de usuario, la accesibilidad, la facilidad de uso y la satisfacción del usuario.</p>
-
-                    <p class="text-light text-shadow-custom">◘ Disponibilidad: establece cuánto tiempo el sistema debe estar disponible para los usuarios. Puede incluir objetivos de tiempo de actividad, tiempo de inactividad planificado y recuperación ante fallas.</p>
 
                     <p class="text-light text-shadow-custom">◘ Fiabilidad: describe la confiabilidad del sistema y su capacidad para funcionar correctamente durante un período de tiempo determinado. Puede incluir aspectos como la tolerancia a fallos y la recuperación ante errores.</p>
 
