--- a/Archivos Ejecutables/ejemplos.html
+++ b/Archivos Ejecutables/ejemplos.html
@@ -128,7 +128,27 @@
 
                         <p class="text-light text-shadow-custom">◘ Ejemplo:</p>
 
-                        <img src="img/4521117.png" width="500px" class="mx-auto d-block" alt="">
+                        <img src="img/4521117.png" width="350px" class="mx-auto d-block" alt="">
+
+                        <p class="text-light text-shadow-custom">◘ Rendimiento: El sistema debe cargar páginas en un tiempo promedio de menos de 2 segundos.</p>
+
+                        <p class="text-light text-shadow-custom">◘ Escalabilidad: El sistema debe ser capaz de manejar un aumento del 50% en el tráfico durante la temporada de ventas sin degradar el rendimiento.</p>
+
+                        <p class="text-light text-shadow-custom">◘ Disponibilidad: La tasa de disponibilidad objetivo debe ser del 99.9%, por lo que el sistema debe estar disponible las 24 horas del día, los 7 días de la semana, con un tiempo de inactividad máximo de 1 hora al mes para mantenimiento programado.</p>
+
+                    </div>
+
+                </div>
+
+                <div class="col">
+
+                <div class="container">
+
+                    <div class=".text-shadow-custom" style="text-shadow: -1px -1px 1px #aaa, 0px 4px 1px rgba(0, 0, 0, 0.5), 4px 4px 5px rgba(0, 0, 0, 0.7),0px 0px 7px rgba(0, 0, 0, 0.4);">
+
+                        <p class="text-light text-shadow-custom">◘ Ejemplo:</p>
+
+                        <img src="img/4521117.png" width="350px" class="mx-auto d-block" alt="">
 
                         <p class="text-light text-shadow-custom">◘ Rendimiento: El sistema debe cargar páginas en un tiempo promedio de menos de 2 segundos.</p>
 
