Administrando línea por línea la información...

--- a/Archivos Ejecutables/ejemplos.html
+++ b/Archivos Ejecutables/ejemplos.html
@@ -116,9 +116,11 @@
 
             <div class=".text-shadow-custom" style="text-shadow: -1px -1px 1px #aaa, 0px 4px 1px rgba(0, 0, 0, 0.5), 4px 4px 5px rgba(0, 0, 0, 0.7),0px 0px 7px rgba(0, 0, 0, 0.4);">
 
-                <p class="text-light text-shadow-custom">Los requisitos no funcionales variarán según el contexto y los objetivos específicos de cada sistema, aquí algunos ejemplos por tipo de sistema:</p>
+                <p class="text-light text-shadow-custom">Los requisitos no funcionales variarán según el contexto y los objetivos específicos de cada sistema, aquí algunos ejemplos por tipo de sistema:</p></br>
 
             </div>
+
+            <hr>
 
             <div class="col">
 
@@ -126,7 +128,7 @@
 
                     <div class=".text-shadow-custom" style="text-shadow: -1px -1px 1px #aaa, 0px 4px 1px rgba(0, 0, 0, 0.5), 4px 4px 5px rgba(0, 0, 0, 0.7),0px 0px 7px rgba(0, 0, 0, 0.4);">
 
-                        <p class="text-light text-shadow-custom">◘ Ejemplo:</p>
+                        <h5 class="text-info text-shadow-custom">Ejemplo 1: Sistema de Comercio Electrónico</h5>
 
                         <img src="img/4521117.png" width="350px" class="mx-auto d-block" alt="">
 
@@ -140,17 +142,19 @@
 
                 </div>
 
+                <hr>
+
                 <div class="col">
 
                 <div class="container">
 
                     <div class=".text-shadow-custom" style="text-shadow: -1px -1px 1px #aaa, 0px 4px 1px rgba(0, 0, 0, 0.5), 4px 4px 5px rgba(0, 0, 0, 0.7),0px 0px 7px rgba(0, 0, 0, 0.4);">
 
-                        <p class="text-light text-shadow-custom">◘ Ejemplo:</p>
+                        <h5 class="text-info text-shadow-custom">Ejemplo 2: Aplicación Banca en Línea</h5>
 
-                        <img src="img/4521117.png" width="350px" class="mx-auto d-block" alt="">
+                        <img src="img/9359561.png" width="350px" class="mx-auto d-block" alt="">
 
-                        <p class="text-light text-shadow-custom">◘ Rendimiento: El sistema debe cargar páginas en un tiempo promedio de menos de 2 segundos.</p>
+                        <p class="text-light text-shadow-custom">◘ Seguridad: La comunicación entre el cliente y el servidor debe estar encriptada mediante el protocolo HTTPS.</p>
 
                         <p class="text-light text-shadow-custom">◘ Escalabilidad: El sistema debe ser capaz de manejar un aumento del 50% en el tráfico durante la temporada de ventas sin degradar el rendimiento.</p>
 
