--- a/Archivos Ejecutables/historia.html
+++ b/Archivos Ejecutables/historia.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diferencias entre Requerimientos Funcionales y No Funcionales</title>
+    <title>Historia acerca de Requisitos No Funcionales</title>
     
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
@@ -106,7 +106,7 @@
             <div class="col">
                 <div class="border-bottom">
                     <div class=".text-shadow-custom" style="text-shadow: -1px -1px 1px #aaa, 0px 4px 1px rgba(0, 0, 0, 0.5), 4px 4px 5px rgba(0, 0, 0, 0.7),0px 0px 7px rgba(0, 0, 0, 0.4);">
-                        <h1 class="text-info text-center">Historia</h1>
+                        <h1 class="text-dark text-center">Historia</h1>
                     </div>
                 </div>
             </div>
