--- a/Archivos Ejecutables/importancia.html
+++ b/Archivos Ejecutables/importancia.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Importancia</title>
 
+    <link rel="icon" type="image/x-icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/Om_symbol.svg/1987px-Om_symbol.svg.png">
+
     <link rel="stylesheet" href="css/bootstrap.min.css" class="css">
 
 </head>
