--- a/Archivos Ejecutables/noFuncional.html
+++ b/Archivos Ejecutables/noFuncional.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diferencias entre Requerimientos Funcionales y No Funcionales</title>
+
+    <link rel="icon" type="image/x-icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/Om_symbol.svg/1987px-Om_symbol.svg.png">
     
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
